--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "corevideo-sys"
 version = "0.0.1"
 edition = "2018"
 authors = ["luozijun <luozijun.assistant@gmail.com>"]
-description = "Bindings to CoreVideo for OS X"
+description = "Bindings to CoreVideo for OS X and iOS"
 license = "MIT"
 homepage   = "https://github.com/luozijun/rust-corevideo-sys"
 repository = "https://github.com/luozijun/rust-corevideo-sys"
