--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,16 @@
 [package]
-name = "corevideo-sys"
-version = "0.0.1"
-edition = "2018"
-authors = ["luozijun <luozijun.assistant@gmail.com>"]
-description = "Bindings to CoreVideo for OS X and iOS"
+name = "core-video-sys"
+version = "0.1.0"
+authors = ["luozijun <luozijun.assistant@gmail.com>", "michael.laifx <cihv2@163.com>"]
+description = "Bindings to CoreVideo.framework for macOS and iOS"
 license = "MIT"
 homepage   = "https://github.com/luozijun/rust-corevideo-sys"
 repository = "https://github.com/luozijun/rust-corevideo-sys"
 documentation = "https://docs.rs/corevideo-sys/*/x86_64-apple-darwin/corevideo_sys"
+edition = "2018"
 
 [dependencies]
-libc = "0.2"
+libc = "0.2.47"
+objc = "0.2.5"
 core-foundation-sys = "0.6.2"
-coremedia-sys = "0.0.2"
+metal = { version = "0.14.0", features = ["private"] }
