--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 authors = ["luozijun <luozijun.assistant@gmail.com>", "michael.laifx <cihv2@163.com>"]
 description = "Bindings to CoreVideo.framework for macOS and iOS"
 license = "MIT"
-homepage   = "https://github.com/luozijun/rust-corevideo-sys"
-repository = "https://github.com/luozijun/rust-corevideo-sys"
-documentation = "https://docs.rs/corevideo-sys/*/x86_64-apple-darwin/corevideo_sys"
+homepage   = "https://github.com/luozijun/rust-core-video-sys"
+repository = "https://github.com/luozijun/rust-core-video-sys"
+documentation = "https://docs.rs/core-video-sys/*/x86_64-apple-darwin/core-video-sys"
 edition = "2018"
 build = "build.rs"
 links = "CoreVideo"
