--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "core-video-sys"
-version = "0.1.4"
+version = "0.2.0"
 authors = ["luozijun <luozijun.assistant@gmail.com>", "michael.laifx <cihv2@163.com>"]
 description = "Bindings to CoreVideo.framework for macOS and iOS"
 license = "MIT"
@@ -16,19 +16,14 @@ objc = "0.2"
 core-foundation-sys = "0.8"
 
 [dependencies.metal]
-version = "0.20"
-features = ["private"]
-optional = true
-
-[dependencies.core-graphics]
-version = "0.22"
+version = "0.23"
 optional = true
 
 [features]
-default = [ "display_link", "metal" ]
+default = []
 all = [ "display_link", "direct3d", "io_suface", "opengl" ]
 
-display_link = [ "opengl", "core-graphics" ]
+display_link = [ "opengl" ]
 direct3d  = [ ]
 io_suface = [ ]
 opengl    = [ ]
